--- a/package.json
+++ b/package.json
@@ -2,35 +2,44 @@
   "name": "landingpage-react-template",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "bootstrap": "^5.3.0",
-    "emailjs-com": "^2.6.4",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-helmet-async": "^1.3.0",
-    "react-router-dom": "^6.14.0",
-    "react-scripts": "^5.0.1",
-    "react-select": "^5.7.3",
-    "reactstrap": "^9.2.0",
-    "smooth-scroll": "^16.1.3",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@faker-js/faker": "^7.6.0",
     "@iconify/react": "^4.1.0",
+    "@mui/icons-material": "^5.13.7",
     "@mui/lab": "^5.0.0-alpha.103",
-    "@mui/material": "^5.11.10",
+    "@mui/material": "^5.13.7",
+    "@mui/x-data-grid": "^6.9.2",
+    "@nivo/bar": "^0.83.0",
+    "@nivo/geo": "^0.83.0",
+    "@nivo/line": "^0.83.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "apexcharts": "^3.37.0",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "change-case": "^4.1.2",
     "date-fns": "^2.29.3",
+    "emailjs-com": "^2.6.4",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
+    "mdb-react-ui-kit": "^6.1.0",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-cool-form": "^0.4.1",
+    "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.43.1",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
+    "react-router-dom": "^6.14.0",
+    "react-scripts": "^5.0.1",
+    "react-select": "^5.7.3",
+    "reactstrap": "^9.2.0",
     "simplebar-react": "^3.2.1",
+    "smooth-scroll": "^16.1.3",
     "web-vitals": "^3.1.1"
   },
   "devDependencies": {
