--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "change-case": "^4.1.2",
+    "cloudinary-core": "^2.13.0",
     "date-fns": "^2.29.3",
     "emailjs-com": "^2.6.4",
     "history": "^5.3.0",
@@ -33,6 +34,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.43.1",
+    "react-icons": "^4.10.1",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.14.0",
     "react-scripts": "^5.0.1",
