--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.13.7",
     "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.13.7",
+    "@mui/system": "^5.14.3",
     "@mui/x-data-grid": "^6.9.2",
     "@nivo/bar": "^0.83.0",
     "@nivo/geo": "^0.83.0",
